# CK3toEU5

./: .clang-tidy  .gitignore  .gitmodules  CK3toEU5-Installer.iss  CMakeLists.txt  CMakeSettings.json
.github/: FUNDING.yml
.github/workflows/: linux_analysis.yml  publish_commit_id.yml  run_clang_tidy.yml  windows_build_test_and_push.yml
CK3toEU5/Data_Files/configurables/: cultureGroups_map.txt  religion_map.txt
data/: readme.txt  version.txt
data/configurables/: cultureGroups_map.txt  language_map.txt  religion_map.txt  tag_mappings.txt
data/fronter/: configuration_l_english.yml  configuration_l_french.yml  configuration_l_german.yml  configuration_l_italian.yml  configuration_l_latin.yml  configuration_l_russian.yml  fronter-configuration.txt  fronter-options.txt  options_l_english.yml
docs/: release_checklists.txt  style_guide.txt.txt
src/: ck3_to_eu5_converter.cpp  ck3_to_eu5_converter.hpp  main.cpp  placeholder_tests.cpp
